is_debug = true
target_cpu = "arm"
target_os = "android"
v8_android_log_stdout = true
v8_enable_backtrace = true
v8_enable_slow_dchecks = true
v8_optimized_debug = false
is_component_build = false
v8_monolithic = true                  # Enable the v8_monolith target.
v8_use_external_startup_data = false  # The snapshot is included in the binary.
