android_unstripped_runtime_outputs = false
is_debug = false
v8_target_cpu = "arm64"
target_cpu = "x64"
target_os = "android"
v8_android_log_stdout = true
is_component_build = false
v8_monolithic = true                  # Enable the v8_monolith target.
v8_use_external_startup_data = false  # The snapshot is included in the binary.
